@@ -555,6 +555,7 @@ textarea {
 	margin-right: auto;
 	vertical-align: middle;
 	border: 1px solid #9B9796;
+	white-space: normal;
 }
 /* Style for the popup with edit functions */
 .FactLabelCellEdit {
