@@ -9,8 +9,10 @@
 =====================================================================
 
 Version 2.1 beta 1
-- fixed error in search controller
-- fixed incorrect embedding of notes and media in gedcom export
+- Added gedcom config option to exclude folders from media tree
+- Fixed text out of box on registration message
+- Fixed error in search controller
+- Fixed incorrect embedding of notes and media in gedcom export
 - Fixed unsorted dirlist in add media
 - Fixed indexing errors due to wrong viewport
 - Fixed Longest living person should not be based on "before" or "after" dates
